--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Read CSV into dataframe\n",
-    "data = pd.read_csv('../vehicles_us.csv')"
+    "data = pd.read_csv('ESERVER/Profiles/paul.london/Documents/GitHub/Sprint-4-Project/vehicles_us.csv')"
    ]
   },
   {
