fixed .csv path

--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -18,8 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read CSV into dataframe\n",
-    "data = pd.read_csv('ESERVER/Profiles/paul.london/Documents/GitHub/Sprint-4-Project/vehicles_us.csv')"
+    "# Read CSV (directly from repository)\n",
+    "url = 'https://github.com/paul-london/Sprint-4-Project/blob/main/vehicles_us.csv'\n",
+    "data = pd.read_csv(url)"
    ]
   },
   {
