fixed .csv path

--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -14,18 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read CSV (directly from repository)\n",
-    "url = 'https://github.com/paul-london/Sprint-4-Project/blob/main/vehicles_us.csv'\n",
-    "data = pd.read_csv(url)"
+    "# Read CSV\n",
+    "data = pd.read_csv('U:/Documents/GitHub/Sprint-4-Project/vehicles_us.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +190,7 @@
        "4    automatic   sedan       black     NaN  2019-04-02           28  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -271,208 +270,208 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9669</th>\n",
-       "      <td>26995</td>\n",
-       "      <td>2013.0</td>\n",
-       "      <td>ford f-250 sd</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>40454.0</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>truck</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2019-04-03</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13288</th>\n",
-       "      <td>6950</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>ford edge</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>126000.0</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>white</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2018-11-14</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36297</th>\n",
-       "      <td>2497</td>\n",
-       "      <td>2013.0</td>\n",
-       "      <td>gmc acadia</td>\n",
-       "      <td>like new</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>86731.0</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>black</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2019-04-10</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18105</th>\n",
-       "      <td>3200</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>chevrolet impala</td>\n",
-       "      <td>good</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>sedan</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2018-08-17</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19310</th>\n",
-       "      <td>10802</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>dodge grand caravan</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>98524.0</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>mini-van</td>\n",
-       "      <td>silver</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2019-03-27</td>\n",
-       "      <td>74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6184</th>\n",
-       "      <td>3100</td>\n",
-       "      <td>2005.0</td>\n",
-       "      <td>chevrolet trailblazer</td>\n",
-       "      <td>good</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>177000.0</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>silver</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2018-05-18</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21848</th>\n",
-       "      <td>5995</td>\n",
-       "      <td>2015.0</td>\n",
+       "      <th>7282</th>\n",
+       "      <td>2800</td>\n",
+       "      <td>2003.0</td>\n",
        "      <td>ford focus se</td>\n",
        "      <td>excellent</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>102000.0</td>\n",
+       "      <td>89188.0</td>\n",
        "      <td>automatic</td>\n",
        "      <td>sedan</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>red</td>\n",
        "      <td>True</td>\n",
-       "      <td>2018-06-25</td>\n",
+       "      <td>2018-06-30</td>\n",
        "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24121</th>\n",
-       "      <td>1750</td>\n",
-       "      <td>1999.0</td>\n",
-       "      <td>toyota camry</td>\n",
-       "      <td>good</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>198000.0</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>sedan</td>\n",
-       "      <td>grey</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2018-10-07</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25921</th>\n",
-       "      <td>2995</td>\n",
-       "      <td>2002.0</td>\n",
-       "      <td>ford taurus</td>\n",
+       "      <th>12122</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>ram 1500</td>\n",
        "      <td>excellent</td>\n",
        "      <td>6.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>154000.0</td>\n",
+       "      <td>40883.0</td>\n",
        "      <td>automatic</td>\n",
-       "      <td>sedan</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>truck</td>\n",
+       "      <td>custom</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-02-02</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2018-06-14</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51216</th>\n",
-       "      <td>11375</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>jeep grand cherokee</td>\n",
+       "      <th>3176</th>\n",
+       "      <td>6999</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>honda civic</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>94132.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>coupe</td>\n",
+       "      <td>white</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2018-06-18</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21058</th>\n",
+       "      <td>9995</td>\n",
+       "      <td>1996.0</td>\n",
+       "      <td>ford f-150</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>204055.0</td>\n",
+       "      <td>manual</td>\n",
+       "      <td>truck</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2018-11-02</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14048</th>\n",
+       "      <td>8900</td>\n",
+       "      <td>2007.0</td>\n",
+       "      <td>toyota tacoma</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>213000.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>pickup</td>\n",
+       "      <td>silver</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2018-06-08</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18819</th>\n",
+       "      <td>6500</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>ford focus se</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>54000.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>hatchback</td>\n",
+       "      <td>red</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2018-06-10</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24382</th>\n",
+       "      <td>20998</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>ford f-150</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>87161.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>truck</td>\n",
+       "      <td>red</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2019-04-11</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20905</th>\n",
+       "      <td>16905</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>gmc acadia</td>\n",
        "      <td>good</td>\n",
        "      <td>6.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>135978.0</td>\n",
+       "      <td>106578.0</td>\n",
        "      <td>automatic</td>\n",
        "      <td>SUV</td>\n",
        "      <td>black</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-01-03</td>\n",
-       "      <td>40</td>\n",
+       "      <td>2018-10-03</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31662</th>\n",
+       "      <td>35000</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>gmc sierra 2500hd</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>64700.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>pickup</td>\n",
+       "      <td>black</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2018-09-07</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10307</th>\n",
+       "      <td>1975</td>\n",
+       "      <td>2007.0</td>\n",
+       "      <td>dodge grand caravan</td>\n",
+       "      <td>good</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>225000.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>mini-van</td>\n",
+       "      <td>green</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2019-02-07</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       price model_year                  model  condition cylinders fuel  \\\n",
-       "9669   26995     2013.0          ford f-250 sd  excellent       8.0  gas   \n",
-       "13288   6950     2008.0              ford edge  excellent       6.0  gas   \n",
-       "36297   2497     2013.0             gmc acadia   like new       6.0  gas   \n",
-       "18105   3200     2010.0       chevrolet impala       good       6.0  gas   \n",
-       "19310  10802     2015.0    dodge grand caravan  excellent   Unknown  gas   \n",
-       "6184    3100     2005.0  chevrolet trailblazer       good       6.0  gas   \n",
-       "21848   5995     2015.0          ford focus se  excellent   Unknown  gas   \n",
-       "24121   1750     1999.0           toyota camry       good       4.0  gas   \n",
-       "25921   2995     2002.0            ford taurus  excellent       6.0  gas   \n",
-       "51216  11375     2014.0    jeep grand cherokee       good       6.0  gas   \n",
+       "       price model_year                model  condition cylinders fuel  \\\n",
+       "7282    2800     2003.0        ford focus se  excellent       4.0  gas   \n",
+       "12122      1     2017.0             ram 1500  excellent       6.0  gas   \n",
+       "3176    6999     2010.0          honda civic  excellent       4.0  gas   \n",
+       "21058   9995     1996.0           ford f-150  excellent       8.0  gas   \n",
+       "14048   8900     2007.0        toyota tacoma  excellent       6.0  gas   \n",
+       "18819   6500    Unknown        ford focus se  excellent       4.0  gas   \n",
+       "24382  20998     2016.0           ford f-150  excellent       6.0  gas   \n",
+       "20905  16905    Unknown           gmc acadia       good       6.0  gas   \n",
+       "31662  35000     2017.0    gmc sierra 2500hd  excellent       8.0  gas   \n",
+       "10307   1975     2007.0  dodge grand caravan       good       6.0  gas   \n",
        "\n",
-       "       odometer transmission      type paint_color  is_4wd date_posted  \\\n",
-       "9669    40454.0    automatic     truck     Unknown    True  2019-04-03   \n",
-       "13288  126000.0    automatic       SUV       white    True  2018-11-14   \n",
-       "36297   86731.0    automatic       SUV       black    True  2019-04-10   \n",
-       "18105   Unknown    automatic     sedan     Unknown    True  2018-08-17   \n",
-       "19310   98524.0    automatic  mini-van      silver    True  2019-03-27   \n",
-       "6184   177000.0    automatic       SUV      silver    True  2018-05-18   \n",
-       "21848  102000.0    automatic     sedan     Unknown    True  2018-06-25   \n",
-       "24121  198000.0    automatic     sedan        grey    True  2018-10-07   \n",
-       "25921  154000.0    automatic     sedan     Unknown    True  2019-02-02   \n",
-       "51216  135978.0    automatic       SUV       black    True  2019-01-03   \n",
+       "       odometer transmission       type paint_color  is_4wd date_posted  \\\n",
+       "7282    89188.0    automatic      sedan         red    True  2018-06-30   \n",
+       "12122   40883.0    automatic      truck      custom    True  2018-06-14   \n",
+       "3176    94132.0    automatic      coupe       white    True  2018-06-18   \n",
+       "21058  204055.0       manual      truck        blue    True  2018-11-02   \n",
+       "14048  213000.0    automatic     pickup      silver    True  2018-06-08   \n",
+       "18819   54000.0    automatic  hatchback         red    True  2018-06-10   \n",
+       "24382   87161.0    automatic      truck         red    True  2019-04-11   \n",
+       "20905  106578.0    automatic        SUV       black    True  2018-10-03   \n",
+       "31662   64700.0    automatic     pickup       black    True  2018-09-07   \n",
+       "10307  225000.0    automatic   mini-van       green    True  2019-02-07   \n",
        "\n",
        "       days_listed  \n",
-       "9669            18  \n",
-       "13288           20  \n",
-       "36297           88  \n",
-       "18105           21  \n",
-       "19310           74  \n",
-       "6184            40  \n",
-       "21848           23  \n",
-       "24121           40  \n",
-       "25921            2  \n",
-       "51216           40  "
+       "7282            23  \n",
+       "12122            7  \n",
+       "3176            35  \n",
+       "21058           55  \n",
+       "14048           40  \n",
+       "18819           18  \n",
+       "24382           37  \n",
+       "20905           41  \n",
+       "31662           44  \n",
+       "10307            7  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -52580,7 +52579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -156253,9 +156252,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-01 11:59:06.840 \n",
+      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+      "  command:\n",
+      "\n",
+      "    streamlit run c:\\Users\\paul.london\\AppData\\Local\\anaconda3\\Lib\\site-packages\\ipykernel_launcher.py [ARGUMENTS]\n"
+     ]
+    }
+   ],
    "source": [
     "# Making checkbox to alter behavior of scatter plot between sorting by fuel type to sorting by vehicle condition\n",
     "checked = st.checkbox('Change scatterplot to sort by Vehicle Condition')\n",
@@ -156265,6 +156276,13 @@
     "else:\n",
     "    st.write('Scatterplot will sort by Fuel Type')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
