fixing .csv path

--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read CSV\n",
-    "data = pd.read_csv('U:/Documents/GitHub/Sprint-4-Project/vehicles_us.csv')"
+    "data = pd.read_csv(r'U:\\Documents\\GitHub\\Sprint-4-Project\\vehicles_us.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "4    automatic   sedan       black     NaN  2019-04-02           28  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
