error file not found

--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -16,10 +16,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\palon\\Documents\\GitHub\\Sprint-4-Project\\Notebooks\n"
+     ]
+    }
+   ],
    "source": [
-    "# Read CSV into dataframe\n",
-    "data = pd.read_csv(r'C:/Users/palon/Documents/GitHub/Sprint-4-Project/vehicles_us.csv')"
+    "# Read CSV\n",
+    "data = pd.read_csv(r'C:\\Users\\palon\\Documents\\GitHub\\Sprint-4-Project\\vehicles_us.csv')"
    ]
   },
   {
