--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -27,7 +27,7 @@
    ],
    "source": [
     "# Read CSV\n",
-    "data = pd.read_csv(r'C:\\Users\\palon\\Documents\\GitHub\\Sprint-4-Project\\vehicles_us.csv')"
+    "data = pd.read_csv('C:/Users/palon/Documents/GitHub/Sprint-4-Project/vehicles_us.csv')"
    ]
   },
   {
