--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Analysis of Car Sales Advertisements**"
+    "# **Analysis of Car Sales Advertisements**"
    ]
   },
   {
@@ -27,6 +27,13 @@
    "source": [
     "# Read CSV as dataframe\n",
     "data = pd.read_csv('C:/Users/palon/Documents/GitHub/Sprint-4-Project/vehicles_us.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Exploratory Data Analysis**"
    ]
   },
   {
@@ -212,9 +219,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Observations  \n",
     "The data has a few issues, including missing values for model year, cylinders, odometer, paint color, and whether it is 4wd. \n",
     "This is typical of used car listings - sometimes some of this data is left out, or estimated, by the person selling the vehicle.\n",
-    "Additionally, a few data types should be adjusted to be more logical, such as whole number variables (integers) that are float, such as model year and cylinders."
+    "Additionally, a few data types should be adjusted to be more logical, such as whole number variables (integers) that are float, such as model year and cylinders.\n",
+    "\n",
+    "##### How to fix  \n",
+    "For the missing model year, cylinders, and odometer, we can estimate using the median or mean, as appropriate (see below).\n",
+    "For the missing paint color and whether it is 4 wheel drive, we will just say those are unknown values."
    ]
   },
   {
@@ -253,6 +265,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Data Visualization**  \n",
+    "  \n",
     "To get an overall feel for the types of vehicles in the data set, let's plot a histogram of model year. Since the vast majority of cars are from 1990 or later, I've removed the outliers for visual clarity."
    ]
   },
@@ -48286,13 +48300,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's visualize the data set of car advertisements in a scatterplot with outliers removed (odometer under 400,000 miles and price under $100,000).\n",
+    "Next, let's visualize the data set of car advertisements in a scatterplot with outliers removed (odometer under 400,000 miles and price under $100,000).\n",
     "The data is color coded by fuel type or condition of the vehicle, which can be toggled by a checkbox on the final project page."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -223078,7 +223092,7 @@
          "hovertemplate": "condition=new<br>odometer=%{x}<br>price=%{y}<extra></extra>",
          "legendgroup": "new",
          "marker": {
-          "color": "#000006",
+          "color": "yellow",
           "symbol": "circle"
          },
          "mode": "markers",
@@ -223862,17 +223876,21 @@
     "scatter_price_odo.show()\n",
     "\n",
     "# Scatter plot of price vs. vehicle condition using filtered dataframe for clarity\n",
-    "color_map_cond = {'salvage': 'red', 'like new': 'blue', 'good': 'green', 'fair': 'orange', 'excellent': 'black'}\n",
+    "color_map_cond = {'salvage': 'red', 'like new': 'blue', 'good': 'green', 'fair': 'orange', 'excellent': 'black', 'new': 'yellow'}\n",
     "scatter_price_odo = px.scatter(data_filtered_scatter, title='Sale Price vs. Odometer Reading (by Vehicle Condition)', x='odometer', y='price', hover_data=['odometer', 'price'], color='condition', color_discrete_map=color_map_cond)\n",
     "scatter_price_odo.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### **Conclusion**  \n",
+    "  \n",
+    "In summary, this data set represents a typical group of used car advertisements. One can clearly see from the plots that most of the cars are more recent model years, peaking out at 2013. \n",
+    "From the scatterplots, it is shown (as expected) that price has an inversely proportional relationship with odometer reading, since cars lose their value the more they are driven.\n",
+    "In addition, vehicle condition affects prices as well, with new, like new, and excellent vehicles commanding higher prices than good, fair, or salvage vehicles."
+   ]
   }
  ],
  "metadata": {
