--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Analysis of Car Sales Advertisements**"
+    "# **Analysis of Car Sales Advertisements**  \n",
+    "  ### **Introduction**  \n",
+    "  We are working with a dataset of used car advertisements. As part of this project, we will take a look at the data itself, make sure it is complete and correct, and gather insights using plots and analysis. The main part of the project will be a web application available to the public so that people interested in the data can explore various visualizations and analyses.\n"
    ]
   },
   {
